--- a/requirements.txt
+++ b/requirements.txt
@@ -6,31 +6,42 @@ arrow==1.3.0
 asttokens==3.0.0
 async-lru==2.0.5
 attrs==25.3.0
+azure-core==1.34.0
+azure-storage-blob==12.25.1
 babel==2.17.0
+bcrypt==4.3.0
 beautifulsoup4==4.13.4
 bleach==6.2.0
+blinker==1.9.0
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
+click==8.2.0
 comm==0.2.2
 contourpy==1.3.2
+cryptography==44.0.3
 cycler==0.12.1
 debugpy==1.8.14
 decorator==5.2.1
 defusedxml==0.7.1
 executing==2.2.0
 fastjsonschema==2.21.1
+Flask==3.1.1
+flask-cors==5.0.1
 fonttools==4.57.0
 fqdn==1.5.1
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
+iniconfig==2.1.0
 ipykernel==6.29.5
 ipython==9.1.0
 ipython_pygments_lexers==1.1.1
 ipywidgets==8.1.6
+isodate==0.7.2
 isoduration==20.11.0
+itsdangerous==2.2.0
 jedi==0.19.2
 Jinja2==3.1.6
 json5==0.12.0
@@ -66,10 +77,12 @@ overrides==7.7.0
 packaging==25.0
 pandas==2.2.3
 pandocfilters==1.5.1
+paramiko==3.5.1
 parso==0.8.4
 pexpect==4.9.0
 pillow==11.2.1
 platformdirs==4.3.7
+pluggy==1.6.0
 prometheus_client==0.21.1
 prompt_toolkit==3.0.51
 psutil==7.0.0
@@ -77,8 +90,12 @@ ptyprocess==0.7.0
 pure_eval==0.2.3
 pycparser==2.22
 Pygments==2.19.1
+PyNaCl==1.5.0
+pyodbc==5.2.0
 pyparsing==3.2.3
+pytest==8.3.5
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
 python-json-logger==3.3.0
 pytz==2025.2
 PyYAML==6.0.2
@@ -93,6 +110,7 @@ setuptools==80.4.0
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.7
+SQLAlchemy==2.0.41
 stack-data==0.6.3
 sympy==1.13.3
 terminado==0.18.1
@@ -108,4 +126,5 @@ wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
+Werkzeug==3.1.3
 widgetsnbextension==4.0.14
