--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ charset-normalizer==3.4.1
 click==8.2.0
 comm==0.2.2
 contourpy==1.3.2
+coverage==7.8.0
 cryptography==44.0.3
 cycler==0.12.1
 debugpy==1.8.14
