--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+amqp==5.3.1
 anyio==4.9.0
 appnope==0.1.4
 argon2-cffi==23.1.0
@@ -11,12 +12,17 @@ azure-storage-blob==12.25.1
 babel==2.17.0
 bcrypt==4.3.0
 beautifulsoup4==4.13.4
+billiard==4.2.1
 bleach==6.2.0
 blinker==1.9.0
+celery==5.5.2
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.2.0
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 comm==0.2.2
 contourpy==1.3.2
 coverage==7.8.0
@@ -63,6 +69,7 @@ jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.14
 kiwisolver==1.4.8
+kombu==5.5.3
 MarkupSafe==3.0.2
 matplotlib==3.10.1
 matplotlib-inline==0.1.7
@@ -102,6 +109,7 @@ python-json-logger==3.3.0
 pytz==2025.2
 PyYAML==6.0.2
 pyzmq==26.4.0
+redis==6.1.0
 referencing==0.36.2
 requests==2.32.3
 rfc3339-validator==0.1.4
@@ -124,6 +132,7 @@ typing_extensions==4.13.2
 tzdata==2025.2
 uri-template==1.3.0
 urllib3==2.4.0
+vine==5.1.0
 wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
